# auto-diff

./: CMakeLists.txt  README.md
include/ad/: dual.h
src/: dual.cpp
